# tree-sitter-asm-intel

./: Cargo.toml  README.md  TODO.md  binding.gyp  grammar.js  package.json  raw_gcc_output
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: blob.txt  comment.txt  constants.txt  hello.txt  instruction.txt  instruction_call.txt  instruction_gcc.txt  instruction_nasm.txt  label.txt  nasm_examples.txt  pointer.txt  string.txt
