[package]
name = "tree-sitter-asm-intel"
description = "asm-intel grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "asm-intel"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-asm-intel"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
